--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <a class="links-header links" href="">noticias</a>
                             <a class="links-header links" href="/tendencias.html">tendencias</a>
                             <a class="links-header home" href="/index.html"><img style="width: 50px;" src="/assets/img/Favicon_La Puta Radio_SVG-02.svg" alt=""></a>
-                            <a class="links-header links" href="">conciertos</a>
+                            <a class="links-header links" href="/conciertos.html">conciertos</a>
                             <a class="links-header links" href="/playlist.html">playlist</a>
                         </div>
                 
